# MIRCertificationManager

./: BlockChainLogger.cpp  BlockChainLogger.h  CMakeLists.txt  README.md  Server.cpp  Server.h  installCertificate.cpp  main.cpp  test.cert  testBlockchainLog.cpp  testRequest.cpp  uninstallCertificate.cpp
message/: AddOrUpdateCertificateRequestMessage.h  BaseRequestMessage.h  ExistsCertificateRequestMessage.h  GetLifetimeRequestMessage.h  RemoveCertificateRequestMessage.h
testjson/: testAddOrUpdateCertificateRequet.json  testExistsCertificate.json  testGetCertificateLifetime.json  testRemoveCertificateRequest.json
utils/: FileUtils.cpp  FileUtils.h  JsonCppUtil.cpp  JsonCppUtil.h  NDNCertificationUtil.cpp  NDNCertificationUtil.h  RedisUtil.cpp  RedisUtil.h  RingBuffer.cpp  RingBuffer.h
